# hcr_term_project

./: .gitignore  .gitmodules  README.md  autonomus_nav.sh  env.sh  gmapping_bringup.sh  kobuki_bringup.sh  network_kobuki.sh  network_master.sh  setup.sh  setup_arm.sh
Test/: hall_all.pgm  hall_all.yaml  hall_all_1.pgm  hall_all_1.yaml  hall_all_2.yaml  hall_all_2_1.pgm  hall_all_2_1.yaml  hall_all_3.pgm  hall_all_3.yaml  hall_long_fail1.pgm  hall_long_fail1.yaml  hall_long_fail2.pgm  hall_long_fail2.yaml
Test/Copy/: hall_long_fail2.yaml
docs/: TermProjectProposal.tex  cameraTopics.txt
docs/TermProjectDefense/: TermProjectDefense.aux  TermProjectDefense.tex
hallway_results/: hall_figure8.pgm  hall_figure8.yaml  hall_l0ng_1_1.pgm  hall_l0ng_1_1.yaml  hall_l0ng_1_2.pgm  hall_l0ng_1_2.yaml  hall_long_1_1.pgm  hall_long_1_1.yaml  hall_long_1_2.pgm  hall_long_1_2.yaml  hall_long_1_TB1_error.pgm  hall_long_1_TB1_error.yaml  hall_long_2_4H_NL1A.pgm  hall_long_2_4H_NL1A.yaml  hall_short_1.pgm  hall_short_1.yaml  hall_short_2.pgm  hall_short_2.yaml
kobuki/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
kobuki/devel/include/kobuki_msgs/: AutoDockingAction.h  AutoDockingActionFeedback.h  AutoDockingActionGoal.h  AutoDockingActionResult.h  AutoDockingFeedback.h  AutoDockingGoal.h  AutoDockingResult.h  BumperEvent.h  ButtonEvent.h  CliffEvent.h  ControllerInfo.h  DigitalInputEvent.h  DigitalOutput.h  DockInfraRed.h  ExternalPower.h  KeyboardInput.h  Led.h  MotorPower.h  PowerSystemEvent.h  RobotStateEvent.h  ScanAngle.h  SensorState.h  Sound.h  VersionInfo.h  WheelDropEvent.h
kobuki/devel/include/yocs_cmd_vel_mux/: reloadConfig.h
kobuki/devel/include/yocs_msgs/: ARPair.h  ARPairList.h  (+18 more)
kobuki/src/: .rosinstall
presentation/: .~lock.card-sweatt-termPresentation.odp#  card-sweatt-termPresentation.odp
presentation/Figures/: BB3rd  TestingPaths.xcf
rocon/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
rocon/src/: .rosinstall
rocon/src/concert_scheduling/: README.rst
rocon/src/concert_scheduling/concert_resource_pool/tests/: CMakeLists.txt  test_resource_pool.py
rocon/src/concert_scheduling/concert_scheduler_requests/: CHANGELOG.rst  CMakeLists.txt  README.rst
rocon/src/concert_scheduling/concert_scheduler_requests/doc/: common.rst  concert_scheduler_requests.rst  conf.py  exceptions.rst  index.rst  priority_queue.rst  requester.rst  scheduler.rst  state_transitions.dot  transitions.rst  weblinks.rst
rocon/src/concert_scheduling/concert_scheduler_requests/src/concert_scheduler_requests/: __init__.py  common.py  exceptions.py  priority_queue.py  requester.py  scheduler.py  transitions.py
rocon/src/concert_scheduling/concert_scheduler_requests/tests/: CMakeLists.txt  example_requester.py  example_scheduler.py  py_example_requester.test  py_example_scheduler.test  py_reconnect.test  py_timeout.test  test_common.py  test_example_requester.py  test_example_scheduler.py  test_priority_queue.py  test_transitions.py  timeout_reconnect.py  timeout_requester.py  timeout_scheduler.py  topic_param.test
rocon/src/concert_services/: .gitignore  DONTREADME.md
rocon/src/concert_services/concert_service_admin/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon/src/concert_services/concert_service_admin/services/admin/: admin.interactions  admin.service
rocon/src/concert_services/concert_service_initialisation/: CMakeLists.txt  package.xml
rocon/src/concert_services/concert_service_initialisation/scripts/: make_a_map_pimp.py
rocon/src/concert_services/concert_service_initialisation/services/initialisation/: initialisation.interactions  initialisation.parameters  initialisation.service
rocon/src/concert_services/concert_service_initialisation/services/make_a_map/: make_a_map.interactions  make_a_map.launch  make_a_map.parameters  make_a_map.service
rocon/src/concert_services/concert_service_initialisation/services/map_annotation/: map_annotation.interactions  map_annotation.service
rocon/src/concert_services/concert_service_teleop/: .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon/src/concert_services/concert_service_teleop/scripts/: teleop_pimp.py
rocon/src/concert_services/concert_service_teleop/services/teleop/: teleop.interactions  teleop.launch  teleop.parameters  teleop.service
rocon/src/concert_services/concert_service_turtlesim/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon/src/concert_services/concert_service_turtlesim/launch/: turtle.launch
rocon/src/concert_services/concert_service_turtlesim/scripts/: turtle_herder.py
rocon/src/concert_services/concert_service_turtlesim/services/turtlesim/: turtlesim.launch  turtlesim.parameters  turtlesim.service
rocon/src/concert_services/concert_service_waypoint_navigation/: CMakeLists.txt  package.xml
rocon/src/concert_services/concert_service_waypoint_navigation/services/waypoint_navigation/: waypoint_navigation.launch  waypoint_navigation.link_graph  waypoint_navigation.service
rocon/src/rocon_rapps/: README.md
rocon/src/rocon_rapps/hypothetical_rapps/: CHANGELOG.rst  CMakeLists.txt
rocon/src/rocon_rapps/kobuki_rapps/: CHANGELOG.rst  CMakeLists.txt
rocon/src/rocon_rapps/kobuki_rapps/auto_docking/: auto_docking.rapp
rocon/src/rocon_rapps/kobuki_rapps/random_walker/: random_walker.launch  random_walker.rapp
rocon/src/rocon_rapps/rocon_core_rapps/: CHANGELOG.rst  CMakeLists.txt
rocon/src/rocon_rapps/rocon_core_rapps/chirp/: chirp.rapp
rocon/src/rocon_rapps/rocon_core_rapps/listener/: listener.rapp
rocon/src/rocon_rapps/rocon_core_rapps/talker/: talker.rapp
rocon/src/rocon_rapps/rocon_core_rapps/teleop/: teleop.rapp
rocon/src/rocon_rapps/turtle_rapps/: CHANGELOG.rst  CMakeLists.txt
rocon/src/rocon_rapps/turtle_rapps/teleop/: teleop.rapp
rocon/src/rocon_rapps/turtle_rapps/turtle_stroll/: turtle_stroll.rapp
rocon/src/rqt_capabilities/: CMakeLists.txt  LICENSE  README.md  package.xml  plugin.xml
slam_eval_code/src/core/: CMakeLists.txt  package.xml
turtlebot/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
turtlebot/src/: .rosinstall
(+550 files in other folders)
