<package>
  <name>concert_service_initialisation</name>
  <version>0.1.1</version>
  <description>
      Services to initilise environment. Make a map and annotation
  </description>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_service_initialisation</url>
  <url type="repository">https://github.com/robotics-in-concert/concert_services</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/concert_services/issues</url>
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>concert_scheduler_requests</run_depend>
  <run_depend>concert_service_utilities</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>concert_service_msgs</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rocon_uri</run_depend>
  <run_depend>scheduler_msgs</run_depend>
  <run_depend>unique_id</run_depend>

  <export>
    <concert_service>services/make_a_map/make_a_map.service</concert_service>
    <concert_service>services/map_annotation/map_annotation.service</concert_service>
    <concert_service>services/initialisation/initialisation.service</concert_service>
  </export>
</package>
