##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(hypothetical_rapps)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_package()

##############################################################################
# Installs
##############################################################################

#install(DIRECTORY foo DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
#install(DIRECTORY foobar DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
#install(DIRECTORY bar DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
